# IonSat-RFF

./: .gitignore  .gitmodules  IonSat-RFF.kdev4  OS_8h_source.html  README.md  RFF_8h_source.html  RFF__FreeRTOS_8h_source.html  RFF__config_8h_source.html  RFF__queueSet_8h_source.html  RFF__queue_8h_source.html  RFF__semaphore_8h_source.html  RFF__task_8h_source.html  RFF__timer_8h_source.html  annotated.html  classRFF_1_1Controller-members.html  classRFF_1_1Controller.html  classRFF_1_1EventHandler-members.html  classRFF_1_1EventHandler.html  classRFF_1_1EventHandler__coll__graph.map  classRFF_1_1EventHandler__coll__graph.md5  classRFF_1_1Module-members.html  classRFF_1_1Module.html  classRFF_1_1Mutex-members.html  classRFF_1_1Mutex.html  classRFF_1_1Mutex__coll__graph.map  classRFF_1_1Queue-members.html  classRFF_1_1Queue.html  classRFF_1_1QueueSet-members.html  classRFF_1_1QueueSet.html  classRFF_1_1Semaphore-members.html  classRFF_1_1Semaphore.html  classRFF_1_1SemaphoreHolder-members.html  classRFF_1_1SemaphoreHolder.html  classRFF_1_1Semaphore__inherit__graph.map  classRFF_1_1Semaphore__inherit__graph.md5  classRFF_1_1Setup-members.html  classRFF_1_1Setup.html  classRFF_1_1Task-members.html  classRFF_1_1Task.html  classRFF_1_1Timer-members.html  (+51 more)
.github/workflows/: doxygen.yml  meson.yml
.kdev4/: IonSat-RFF.kdev4
build-stm32/: .ninja_log  build.ninja  compile_commands.json
build-stm32/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-targets.json  intro-tests.json  meson-info.json
build-stm32/meson-logs/: meson-log.txt
build-stm32/meson-private/: cmd_line.txt  coredata.dat.prev
build-stm32/reconfigure/: build.ninja  compile_commands.json
build-stm32/reconfigure/meson-info/: intro-buildoptions.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
build-stm32/reconfigure/meson-logs/: meson-log.txt
build-stm32/reconfigure/meson-private/cmake_freertos/: CMakeCache.txt  Makefile  cmake_install.cmake
cross-compile/: meson.build  stm32.txt
cross-compile/stm32/: cortex-m-generic.ld  gdb-init.gdb  meson.build  openocd-start.sh  start-gdb.sh  stm32.txt  stm32f429.ld  stm32f429_2.ld  syscalls.c  sysmem.c
doc/: introduction.md
doc/design/: RTOS.md  architecture.md
doc/examples/blinker/: blinker.cpp  meson.build
doc/examples/cross-compilation/: README.md
doc/examples/hello/: hello.cpp  hello.md  meson.build
doc/full/: README.md
doc/reference/html/: OS_8h_source.html  RFF_8h_source.html  RFF__FreeRTOS_8h_source.html  RFF__config_8h_source.html  RFF__queueSet_8h_source.html  RFF__queue_8h_source.html  RFF__semaphore_8h_source.html  RFF__task_8h_source.html  annotated.html  classRFF_1_1Controller-members.html  classRFF_1_1Controller.html  classRFF_1_1Controller__coll__graph.map  classRFF_1_1Controller__coll__graph.md5  classRFF_1_1EventHandler-members.html  classRFF_1_1EventHandler.html  classRFF_1_1EventHandler__coll__graph.map  classRFF_1_1EventHandler__coll__graph.md5  classRFF_1_1Mode-members.html  classRFF_1_1Mode.html  classRFF_1_1Module-members.html  classRFF_1_1Module.html  classRFF_1_1Mutex-members.html  classRFF_1_1Mutex.html  classRFF_1_1Mutex__coll__graph.md5  classRFF_1_1Mutex__inherit__graph.map  classRFF_1_1Mutex__inherit__graph.md5  classRFF_1_1Queue-members.html  classRFF_1_1Queue.html  classRFF_1_1QueueSet-members.html  classRFF_1_1QueueSet.html  classRFF_1_1Semaphore-members.html  classRFF_1_1Semaphore.html  classRFF_1_1SemaphoreHolder-members.html  classRFF_1_1SemaphoreHolder.html  classRFF_1_1Semaphore__inherit__graph.map  classRFF_1_1Semaphore__inherit__graph.md5  classRFF_1_1Setup-members.html  classRFF_1_1Setup.html  classRFF_1_1Task-members.html  classRFF_1_1Task.html  (+44 more)
doc/reference/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  searchdata.js
doc/tutorials/: RTOS.md  basics.md  compilation.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  pages_0.js  searchdata.js
src/: meson.build
src/RFF/: .FFS.h.kate-swp  Doxyfile  FFS.h  FFS_config.h  RFF.h  RFF_config.h  unique_function.h
src/RFF/OS/: .OS.h.kate-swp  OS.h
src/RFF/OS/FreeRTOS/: .FFS_FreeRTOS.h.kate-swp  FFS_FreeRTOS.cpp  FFS_FreeRTOS.h  FFS_queue.h  FFS_queueSet.h  FFS_semaphore.h  FFS_task.h  RFF_FreeRTOS.cpp  RFF_FreeRTOS.h  RFF_queue.h  RFF_queueSet.h  RFF_semaphore.h  RFF_task.h  RFF_timer.h  lambda.h
src/RFF/OS/stl/: standard.h
src/RFF/controller/: .controller.h.kate-swp  controller.h
src/RFF/event/: .event.h.kate-swp  event.h
src/RFF/eventHandler/: .eventHandler.h.kate-swp  eventHandler.h  lambda.h  queuedEventHandler.h  taskedEventHandler.h  uuid.h
src/RFF/mode/: .mode.h.kate-swp  mode.h
src/RFF/module/: .module.h.kate-swp  module.h
src/config/: config.h
src/ext/: meson.build  short_alloc.h
src/ext/port_GCC_posix/: FreeRTOSConfig.h  port.c
subprojects/: CTTI.wrap  disable-dynamic-allocation.wrap  freertos.wrap
test/: catch.hpp  meson.build  test.cpp
test/Controller/: controller.cpp  meson.build  setup.cpp
test/EventHandler/: eventHandler.cpp  meson.build
test/Module/: meson.build  module.cpp
test/Queue/: meson.build  queue.cpp
test/QueueSet/: meson.build  queueSet.cpp
test/Semaphore/: meson.build  semaphore.cpp
test/Task/: meson.build  task.cpp
test/Timer/: meson.build  timer.cpp
test/integration/: MFS0.cpp.old  blink.cpp  example0.cpp  meson.build
test/phys/: meson.build
test/unit/: FreeRTOS.cpp  controller.cpp  event.cpp  eventHandler.cpp  main.cpp  meson.build  mode.cpp  module.cpp  task.cpp
